<resources>
    <string name="app_name">PICSSU</string>
    <string name="login">
Login
</string>
    <string name="some_id">
학번을 입력하세요
</string>
    <string name="development_info">"컴퓨터학부 강용석 20201451\n
컴퓨터학부 신지은 20223138\n
컴퓨터학부 최수빈 20223170"</string>

    <string name="ssome_id">지금 우리 학교는</string>
    <string name="topic">\"노을\"</string>
    <string name="num1">140</string>
    <string name="user_name">사용자 1</string>
    <string name="time1">5:45 PM</string>
    <string name="ssu_zzang">실시간 SSU짱은?</string>
    <string name="num_live">200</string>
    <string name="num2">10</string>
    <string name="time2">9:45 PM</string>
    <string name="y_ssu_zzang">어제의 SSU짱은?</string>
    <string name="first_user">인빈</string>
    <string name="second_user">수반</string>
    <string name="third_user">자은</string>


</resources>

