<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.picssu.MainPageActivity">


    <View
        android:id="@+id/mypage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="364dp"
        android:background="@drawable/mypage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/alarm"
        android:layout_width="30dp"
        android:layout_height="26dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/alarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/calender"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/calender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/back"
        android:contextClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/trophy"
        android:layout_width="207dp"
        android:layout_height="118dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="417dp"
        android:background="@drawable/trophy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/y_ssu_zzang"
        android:layout_width="199dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="106dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="106dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/y_ssu_zzang"
        android:textAppearance="@style/y_ssu_zzang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/first"
        android:layout_width="138dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="145dp"
        android:background="#99449BC1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="1"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/first"
        app:layout_constraintEnd_toEndOf="@+id/first"
        app:layout_constraintStart_toEndOf="@+id/secend"
        app:layout_constraintTop_toTopOf="@+id/first" />

    <View
        android:id="@+id/secend"
        android:layout_width="137dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="271dp"
        android:background="#B387B8CC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="2"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/secend"
        app:layout_constraintEnd_toEndOf="@+id/secend"
        app:layout_constraintStart_toStartOf="@+id/secend"
        app:layout_constraintTop_toTopOf="@+id/secend" />

    <View
        android:id="@+id/third"
        android:layout_width="137dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:background="#8087B8CC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="3"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/third"
        app:layout_constraintEnd_toEndOf="@+id/third"
        app:layout_constraintStart_toStartOf="@+id/third"
        app:layout_constraintTop_toTopOf="@+id/third" />

    <ImageView
        android:id="@+id/first_pic"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="209dp"
        android:background="@drawable/first_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="187dp"
        android:layout_marginTop="362dp"
        android:layout_marginEnd="188dp"
        android:background="@drawable/gold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="194dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="195dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/first_user"
        android:textAppearance="@style/first_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/second_pic"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="161dp"
        android:background="@drawable/second_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="410dp"
        android:background="@drawable/silver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="381dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/second_user"
        android:textAppearance="@style/second_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/third_pic"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="305dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="115dp"
        android:background="@drawable/third_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="46dp"
        android:background="@drawable/bronze"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="429dp"
        android:layout_marginEnd="54dp"
        android:gravity="top"
        android:lineSpacingExtra="-1sp"
        android:text="@string/third_user"
        android:textAppearance="@style/third_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>